--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 
       <form id='identicon-form'>
         <div class='field'>
-          <input type='text' placeholder='Enter something...'/>
+          <input type='text' id = "Input" placeholder='Enter something...'/>
           <input type='submit' class='btn' value="Generate" />
         </div>
       </form>
 
     </div>
-
+    <script src = "src/domController.js"></script>
+    <script src="src/identicon.js">  </script>
+    <script src="src/index.js">  </script>
   </body>
 </html>
